[gd_scene load_steps=5 format=3 uid="uid://bd355s2v41us7"]

[ext_resource type="Script" path="res://Scripts/auto_harvester.gd" id="1_dwgwi"]
[ext_resource type="Theme" uid="uid://b4h3syf1usohg" path="res://theme.tres" id="1_jat7s"]

[sub_resource type="Gradient" id="Gradient_5e4xr"]
colors = PackedColorArray(0.617455, 0.617455, 0.617455, 1, 0.832474, 0.832474, 0.832474, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6cyfo"]
gradient = SubResource("Gradient_5e4xr")

[node name="AutoHarvester" type="Node2D"]
script = ExtResource("1_dwgwi")

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 334.0
offset_bottom = 273.0
texture_normal = SubResource("GradientTexture2D_6cyfo")
ignore_texture_size = true
stretch_mode = 0

[node name="Title" type="Label" parent="."]
offset_left = 26.0
offset_top = 16.0
offset_right = 201.0
offset_bottom = 50.0
size_flags_vertical = 1
theme = ExtResource("1_jat7s")
text = "Auto Harvester
"

[node name="HarvestersAmount" type="Label" parent="."]
offset_left = 264.0
offset_top = 16.0
offset_right = 304.0
offset_bottom = 50.0
size_flags_vertical = 1
theme = ExtResource("1_jat7s")
text = "0"

[node name="Price" type="Label" parent="."]
offset_left = 26.0
offset_top = 224.0
offset_right = 84.0
offset_bottom = 258.0
size_flags_horizontal = 6
theme = ExtResource("1_jat7s")
text = "Price"

[node name="PriceValue" type="Label" parent="."]
offset_left = 98.0
offset_top = 224.0
offset_right = 138.0
offset_bottom = 258.0
size_flags_horizontal = 6
theme = ExtResource("1_jat7s")
text = "10
"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
